Header and Name

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-
+    <div class="top">
+        <div id="area">
+            <section class="name">
+                Iver Gil
+            </section>
+            <br><br>
+        </div>
+    </div>
 </body>
 </html>
