--- a/index.html
+++ b/index.html
@@ -9,11 +9,18 @@
 </head>
 <body>
     <div class="top">
-        <div id="area">
+        <div class="area">
             <section class="name">
                 Iver Gil
             </section>
-            <br><br>
+            <section class="box">
+                <header class="title">
+                    About Me
+                </header>
+                <p>
+
+                </p>
+            </section>
         </div>
     </div>
 </body>
