--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     About Me
                 </header>
                 <p>
-
+                    <img src="assets/images/20190429_073654.jpg" alt="Iver Gil-VLCM" height="200px" width="250px">
                 </p>
             </section>
         </div>
