add image and paragraph

--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
 <body>
     <div class="top">
         <div class="area">
+            <ul class="mylinks">
+                <a href="index.html">About    |</a>
+            </ul>
             <section class="name">
                 Iver Gil
+            </section>
+            <section>
+                
             </section>
             <section class="box">
                 <header class="title">
