--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                     About Me
                 </header>
                     <img class="wrap" src="assets/images/20190429_073654.jpg" alt="Iver Gil-VLCM" height="250px" width="300px">
-                    <p> I was born in  Venezuela, I am 38 years old,     I have 2 children, my oldest daughter is 6      years old and my youngest child is 3 years      old, my life is dedicated to them, to give      them the best and that is why we moved to       the United States in November 2017. I like      all sports, especially basketball, I'm a        fan of the Utah Jazz, although I think the      best time was that of Karl Malone y John        Stockton.  My family and I have loved this      city, and we have many wishes to know all       its natural wonders.
+                    <p class="sline"> I was born in  Venezuela, I am 38 years old,     I have 2 children, my oldest daughter is 6      years old and my youngest child is 3 years      old, my life is dedicated to them, to give      them the best and that is why we moved to       the United States in November 2017. I like      all sports, especially basketball, I'm a        fan of the Utah Jazz, although I think the      best time was that of Karl Malone y John        Stockton.  My family and I have loved this      city, and we have many wishes to know all       its natural wonders.
                     </p>
-                    <p class="clearing">
+                    <p class="clearing sline">
                         As a professional I consider myself with
                         good Leadership and an Inspirational and honest person.
                         Able to lead companies and work teams in any environment. Skill in critical and analytical thinking. Innovative and efficient.
