Final Version1.0 footer

--- a/contact.html
+++ b/contact.html
@@ -39,6 +39,8 @@
 
                 </section>
             </div>
+        
+        <footer class="bot">Footer</footer>
         </div>
        
     </body>
