--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
                     
             </section>
         </div>
+       
+       <footer class="bot">Footer</footer>
     </div>
+   
 </body>
 </html>
