--- a/portfolio.html
+++ b/portfolio.html
@@ -36,6 +36,7 @@
                         
                 </section>
             </div>
+            <footer class="bot">Footer</footer>
         </div>
     </body>
 </html>
