--- a/portfolio.html
+++ b/portfolio.html
@@ -26,14 +26,15 @@
                         Portfolio
                     </header>
                         
-                        <img src="assets/images/city1.jpg" alt="City 1">
-                        <img src="assets/images/city3.jpg" alt="City 2">
-                        <img src="assets/images/technics1.jpg" alt="Tech 1">
-                        <img src="assets/images/abstract3.jpg" alt="image 1">
-                        <img src="assets/images/nightlife8.jpg" alt="Night">
-                        <img src="assets/images/technics4.jpg" alt="Tech 4">
+                        <img class="marg" src="assets/images/city1.jpg" alt="City 1">
+                        <img class="marg" src="assets/images/city3.jpg" alt="City 2">
+                        <img class="marg" src="assets/images/technics1.jpg" alt="Tech 1">
+                        <img class="marg" src="assets/images/abstract3.jpg" alt="image 1">
+                        <img class="marg" src="assets/images/nightlife8.jpg" alt="Night">
+                        <img class="marg" src="assets/images/technics4.jpg" alt="Tech 4">
+                        <img class="marg" src="assets/images/city3.jpg" alt="City 2">
+                        <img class="marg" src="assets/images/20190429_073654.jpg" alt="Iver Gil-VLCM" height="250px" width="300px">
 
-                        
                 </section>
             </div>
             <footer class="bot">Footer</footer>
