--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="top">
         <div class="mylinks">
-            <a href="contact.html">Contact</a>
+            <a href="contact.html">Contact  |</a>
             <a href="portfolio.html">Portfolio  |</a>
             <a href="index.html">About  |</a>
         </div>
@@ -24,7 +24,7 @@
                 <header class="title">
                     About Me
                 </header>
-                    <img class="wrap" src="assets/images/20190429_073654.jpg" alt="Iver Gil-VLCM" height="250px" width="300px">
+                    <img class="wrap" src="./assets/images/20190429_073654.jpg" alt="Iver Gil-VLCM" height="250px" width="300px">
                     <p class="sline"> I was born in  Venezuela, I am 38 years old,     I have 2 children, my oldest daughter is 6      years old and my youngest child is 3 years      old, my life is dedicated to them, to give      them the best and that is why we moved to       the United States in November 2017. I like      all sports, especially basketball, I'm a        fan of the Utah Jazz, although I think the      best time was that of Karl Malone y John        Stockton.  My family and I have loved this      city, and we have many wishes to know all       its natural wonders.
                     </p>
                     <p class="clearing sline">
